fixed dark mode button

--- a/style.css
+++ b/style.css
@@ -303,18 +303,7 @@ input[type=submit]:hover {
   }
 
   label {
-    width:100px;
-    height:30px;
-    left:5%;
     top:93%;
-    z-index: 3;
-    position:absolute;
-    display:inline;
-    background-color: #555;
-    border-radius: 200px;
-    box-shadow: inset 0px 5px 15px rgba(0,0,0,0.4), inset 0px -5px 15px rgba(255,255,255,0.1);
-    cursor:pointer;
-    transition:0.3s;
   }
 
 }
